[package]
name = "mdbook-graphviz"
version = "0.0.1"
authors = ["Dylan Owen"]
description = "mdbook preprocessor to add graphviz support"
readme = "Readme.md"
license = "MPL-2.0"
homepage = "https://github.com/dylanowen/mdbook-graphviz"
repository = "https://github.com/dylanowen/mdbook-graphviz"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.3"
clap = "2.33"
serde_json = "1.0"
pulldown-cmark = "0.5"
pulldown-cmark-to-cmark = "1.2.3"

futures-core-preview = "0.3.0-alpha.19"
futures-util-preview = "0.3.0-alpha.19"

[dependencies.tokio]
version = "0.2.0-alpha.6"
features = ["process", "io"]
#tokio-process = "0.3.0-alpha.2"
#tokio-executor = "0.2.0-alpha.6"
